cmake_minimum_required(VERSION 2.8.3)
project(lidarNode)

## Compile as C++11, supported in ROS Kinetic and newer
# add_compile_options(-std=c++11)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED COMPONENTS
  roscpp
  rospy
  std_msgs
  pcl_ros
  pcl_conversions
)


catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES lidarNode
#  CATKIN_DEPENDS roscpp rospy std_msgs
#  DEPENDS system_lib
)


include_directories(
# include
  ${catkin_INCLUDE_DIRS}
)


link_directories(${PCL_LIBRARY_DIRS})

add_executable(lidarnode src/lidarnode.cpp)

target_link_libraries(lidarnode
   ${catkin_LIBRARIES}
   ${PCL_LIBRARIES}
)
